added all the btn function and working fine

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 
     <main>
         <div class="inputContainer">
-            <input type="number" class="box1">
-            <input type="number" class="box2">
+            <input type="number" class="inputOne">
+            <input type="number" class="inputTwo">
 
         </div>
         <div class="buttonContainer">
-            <button class="one">Add</button>
-            <button class="two">subtract</button>
-            <button class="three">multiply</button>
-            <button class="one">divide</button>
+            <button class="add">Add</button>
+            <button class="subtract">subtract</button>
+            <button class="multiply">multiply</button>
+            <button class="divide">divide</button>
         </div>
+
+        <p class="output"></p>
     </main>
 
 
