--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button class="subtract">subtract</button>
             <button class="multiply">multiply</button>
             <button class="divide">divide</button>
+            <button class="clear">Clear All</button>
         </div>
 
         <p class="output"></p>
