--- a/question3.html
+++ b/question3.html
@@ -18,11 +18,13 @@
 
 
         <div class="button">
-            <button id="h1"></button>
-            <button id="h2"></button>
-            <button id="h3"></button>
-            <button id="h4"></button>
+            <button id="h1">h1</button>
+            <button id="h2">h2</button>
+            <button id="h3">h3</button>
+            <button id="h4">h4</button>
         </div>
+
+        <div class="output"></div>
     </main>
     
 </body>
