--- a/question2.html
+++ b/question2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Neog practice question</h1>
@@ -18,8 +19,8 @@
         </div>
 
         <div class="buttonContainer"></div>
-        <button id="plus"> +</button>
-        <button id="minus">-</button>
+        <button id="plus" >+</button>
+        <button id="minus" >-</button>
 
         <Div class="output"></Div>
     </main>
@@ -27,3 +28,5 @@
 </body>
 <script src="Question2.js"></script>
 </html>
+<!-- 
+onclick="changeFontSize(plus)" -->
